# storage/api-docs/api-docs.json
@@ -148,11 +148,6 @@
                                         "type": "string",
                                         "format": "password",
                                         "example": "password123"
-                                    },
-                                    "password_confirmation": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "password123"
                                     }
                                 },
                                 "type": "object"
